Package_Tools/include-C/sokol/util/fertig/sokol_color.h

extern sg_color sg_make_color_4b(uint8_t r, uint8_t g, uint8_t b, uint8_t a);
extern sg_color sg_make_color_1i(uint32_t rgba);
extern sg_color sg_color_lerp(const sg_color* color_a, const sg_color* color_b, float amount);
extern sg_color sg_color_lerp_precise(const sg_color* color_a, const sg_color* color_b, float amount);
extern sg_color sg_color_multiply(const sg_color* color, float scale);