Package_Tools/include-C/sokol/util/fertig/sokol_color.pp


unit sokol_color;
interface

{
  Automatically converted by H2Pas 1.0.0 from sokol_color.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    sokol_color.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Psg_color  = ^sg_color;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}



function sg_make_color_4b(r:Tuint8_t; g:Tuint8_t; b:Tuint8_t; a:Tuint8_t):Tsg_color;cdecl;external;
function sg_make_color_1i(rgba:Tuint32_t):Tsg_color;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function sg_color_lerp(color_a:Psg_color; color_b:Psg_color; amount:single):Tsg_color;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function sg_color_lerp_precise(color_a:Psg_color; color_b:Psg_color; amount:single):Tsg_color;cdecl;external;
(* Const before type ignored *)
function sg_color_multiply(color:Psg_color; scale:single):Tsg_color;cdecl;external;
{
#define SG_ALICE_BLUE  0.941176471f, 0.97254902f, 1.0f, 1.0f 
#define SG_ANTIQUE_WHITE  0.980392157f, 0.921568627f, 0.843137255f, 1.0f 
#define SG_AQUA  0.0f, 1.0f, 1.0f, 1.0f 
#define SG_AQUAMARINE  0.498039216f, 1.0f, 0.831372549f, 1.0f 
#define SG_AZURE  0.941176471f, 1.0f, 1.0f, 1.0f 
#define SG_BEIGE  0.960784314f, 0.960784314f, 0.862745098f, 1.0f 
#define SG_BISQUE  1.0f, 0.894117647f, 0.768627451f, 1.0f 
#define SG_BLACK  0.0f, 0.0f, 0.0f, 1.0f 
#define SG_BLANCHED_ALMOND  1.0f, 0.921568627f, 0.803921569f, 1.0f 
#define SG_BLUE  0.0f, 0.0f, 1.0f, 1.0f 
#define SG_BLUE_VIOLET  0.541176471f, 0.168627451f, 0.88627451f, 1.0f 
#define SG_BROWN  0.647058824f, 0.164705882f, 0.164705882f, 1.0f 
#define SG_BURLYWOOD  0.870588235f, 0.721568627f, 0.529411765f, 1.0f 
#define SG_CADET_BLUE  0.37254902f, 0.619607843f, 0.62745098f, 1.0f 
#define SG_CHARTREUSE  0.498039216f, 1.0f, 0.0f, 1.0f 
#define SG_CHOCOLATE  0.823529412f, 0.411764706f, 0.117647059f, 1.0f 
#define SG_CORAL  1.0f, 0.498039216f, 0.31372549f, 1.0f 
#define SG_CORNFLOWER_BLUE  0.392156863f, 0.584313725f, 0.929411765f, 1.0f 
#define SG_CORNSILK  1.0f, 0.97254902f, 0.862745098f, 1.0f 
#define SG_CRIMSON  0.862745098f, 0.0784313725f, 0.235294118f, 1.0f 
#define SG_CYAN  0.0f, 1.0f, 1.0f, 1.0f 
#define SG_DARK_BLUE  0.0f, 0.0f, 0.545098039f, 1.0f 
#define SG_DARK_CYAN  0.0f, 0.545098039f, 0.545098039f, 1.0f 
#define SG_DARK_GOLDENROD  0.721568627f, 0.525490196f, 0.0431372549f, 1.0f 
#define SG_DARK_GRAY  0.662745098f, 0.662745098f, 0.662745098f, 1.0f 
#define SG_DARK_GREEN  0.0f, 0.392156863f, 0.0f, 1.0f 
#define SG_DARK_KHAKI  0.741176471f, 0.717647059f, 0.419607843f, 1.0f 
#define SG_DARK_MAGENTA  0.545098039f, 0.0f, 0.545098039f, 1.0f 
#define SG_DARK_OLIVE_GREEN  0.333333333f, 0.419607843f, 0.184313725f, 1.0f 
#define SG_DARK_ORANGE  1.0f, 0.549019608f, 0.0f, 1.0f 
#define SG_DARK_ORCHID  0.6f, 0.196078431f, 0.8f, 1.0f 
#define SG_DARK_RED  0.545098039f, 0.0f, 0.0f, 1.0f 
#define SG_DARK_SALMON  0.91372549f, 0.588235294f, 0.478431373f, 1.0f 
#define SG_DARK_SEA_GREEN  0.560784314f, 0.737254902f, 0.560784314f, 1.0f 
#define SG_DARK_SLATE_BLUE  0.282352941f, 0.239215686f, 0.545098039f, 1.0f 
#define SG_DARK_SLATE_GRAY  0.184313725f, 0.309803922f, 0.309803922f, 1.0f 
#define SG_DARK_TURQUOISE  0.0f, 0.807843137f, 0.819607843f, 1.0f 
#define SG_DARK_VIOLET  0.580392157f, 0.0f, 0.82745098f, 1.0f 
#define SG_DEEP_PINK  1.0f, 0.0784313725f, 0.576470588f, 1.0f 
#define SG_DEEP_SKY_BLUE  0.0f, 0.749019608f, 1.0f, 1.0f 
#define SG_DIM_GRAY  0.411764706f, 0.411764706f, 0.411764706f, 1.0f 
#define SG_DODGER_BLUE  0.117647059f, 0.564705882f, 1.0f, 1.0f 
#define SG_FIREBRICK  0.698039216f, 0.133333333f, 0.133333333f, 1.0f 
#define SG_FLORAL_WHITE  1.0f, 0.980392157f, 0.941176471f, 1.0f 
#define SG_FOREST_GREEN  0.133333333f, 0.545098039f, 0.133333333f, 1.0f 
#define SG_FUCHSIA  1.0f, 0.0f, 1.0f, 1.0f 
#define SG_GAINSBORO  0.862745098f, 0.862745098f, 0.862745098f, 1.0f 
#define SG_GHOST_WHITE  0.97254902f, 0.97254902f, 1.0f, 1.0f 
#define SG_GOLD  1.0f, 0.843137255f, 0.0f, 1.0f 
#define SG_GOLDENROD  0.854901961f, 0.647058824f, 0.125490196f, 1.0f 
#define SG_GRAY  0.745098039f, 0.745098039f, 0.745098039f, 1.0f 
#define SG_WEB_GRAY  0.501960784f, 0.501960784f, 0.501960784f, 1.0f 
#define SG_GREEN  0.0f, 1.0f, 0.0f, 1.0f 
#define SG_WEB_GREEN  0.0f, 0.501960784f, 0.0f, 1.0f 
#define SG_GREEN_YELLOW  0.678431373f, 1.0f, 0.184313725f, 1.0f 
#define SG_HONEYDEW  0.941176471f, 1.0f, 0.941176471f, 1.0f 
#define SG_HOT_PINK  1.0f, 0.411764706f, 0.705882353f, 1.0f 
#define SG_INDIAN_RED  0.803921569f, 0.360784314f, 0.360784314f, 1.0f 
#define SG_INDIGO  0.294117647f, 0.0f, 0.509803922f, 1.0f 
#define SG_IVORY  1.0f, 1.0f, 0.941176471f, 1.0f 
#define SG_KHAKI  0.941176471f, 0.901960784f, 0.549019608f, 1.0f 
#define SG_LAVENDER  0.901960784f, 0.901960784f, 0.980392157f, 1.0f 
#define SG_LAVENDER_BLUSH  1.0f, 0.941176471f, 0.960784314f, 1.0f 
#define SG_LAWN_GREEN  0.48627451f, 0.988235294f, 0.0f, 1.0f 
#define SG_LEMON_CHIFFON  1.0f, 0.980392157f, 0.803921569f, 1.0f 
#define SG_LIGHT_BLUE  0.678431373f, 0.847058824f, 0.901960784f, 1.0f 
#define SG_LIGHT_CORAL  0.941176471f, 0.501960784f, 0.501960784f, 1.0f 
#define SG_LIGHT_CYAN  0.878431373f, 1.0f, 1.0f, 1.0f 
#define SG_LIGHT_GOLDENROD  0.980392157f, 0.980392157f, 0.823529412f, 1.0f 
#define SG_LIGHT_GRAY  0.82745098f, 0.82745098f, 0.82745098f, 1.0f 
#define SG_LIGHT_GREEN  0.564705882f, 0.933333333f, 0.564705882f, 1.0f 
#define SG_LIGHT_PINK  1.0f, 0.71372549f, 0.756862745f, 1.0f 
#define SG_LIGHT_SALMON  1.0f, 0.62745098f, 0.478431373f, 1.0f 
#define SG_LIGHT_SEA_GREEN  0.125490196f, 0.698039216f, 0.666666667f, 1.0f 
#define SG_LIGHT_SKY_BLUE  0.529411765f, 0.807843137f, 0.980392157f, 1.0f 
#define SG_LIGHT_SLATE_GRAY  0.466666667f, 0.533333333f, 0.6f, 1.0f 
#define SG_LIGHT_STEEL_BLUE  0.690196078f, 0.768627451f, 0.870588235f, 1.0f 
#define SG_LIGHT_YELLOW  1.0f, 1.0f, 0.878431373f, 1.0f 
#define SG_LIME  0.0f, 1.0f, 0.0f, 1.0f 
#define SG_LIME_GREEN  0.196078431f, 0.803921569f, 0.196078431f, 1.0f 
#define SG_LINEN  0.980392157f, 0.941176471f, 0.901960784f, 1.0f 
#define SG_MAGENTA  1.0f, 0.0f, 1.0f, 1.0f 
#define SG_MAROON  0.690196078f, 0.188235294f, 0.376470588f, 1.0f 
#define SG_WEB_MAROON  0.501960784f, 0.0f, 0.0f, 1.0f 
#define SG_MEDIUM_AQUAMARINE  0.4f, 0.803921569f, 0.666666667f, 1.0f 
#define SG_MEDIUM_BLUE  0.0f, 0.0f, 0.803921569f, 1.0f 
#define SG_MEDIUM_ORCHID  0.729411765f, 0.333333333f, 0.82745098f, 1.0f 
#define SG_MEDIUM_PURPLE  0.576470588f, 0.439215686f, 0.858823529f, 1.0f 
#define SG_MEDIUM_SEA_GREEN  0.235294118f, 0.701960784f, 0.443137255f, 1.0f 
#define SG_MEDIUM_SLATE_BLUE  0.482352941f, 0.407843137f, 0.933333333f, 1.0f 
#define SG_MEDIUM_SPRING_GREEN  0.0f, 0.980392157f, 0.603921569f, 1.0f 
#define SG_MEDIUM_TURQUOISE  0.282352941f, 0.819607843f, 0.8f, 1.0f 
#define SG_MEDIUM_VIOLET_RED  0.780392157f, 0.0823529412f, 0.521568627f, 1.0f 
#define SG_MIDNIGHT_BLUE  0.0980392157f, 0.0980392157f, 0.439215686f, 1.0f 
#define SG_MINT_CREAM  0.960784314f, 1.0f, 0.980392157f, 1.0f 
#define SG_MISTY_ROSE  1.0f, 0.894117647f, 0.882352941f, 1.0f 
#define SG_MOCCASIN  1.0f, 0.894117647f, 0.709803922f, 1.0f 
#define SG_NAVAJO_WHITE  1.0f, 0.870588235f, 0.678431373f, 1.0f 
#define SG_NAVY_BLUE  0.0f, 0.0f, 0.501960784f, 1.0f 
#define SG_OLD_LACE  0.992156863f, 0.960784314f, 0.901960784f, 1.0f 
#define SG_OLIVE  0.501960784f, 0.501960784f, 0.0f, 1.0f 
#define SG_OLIVE_DRAB  0.419607843f, 0.556862745f, 0.137254902f, 1.0f 
#define SG_ORANGE  1.0f, 0.647058824f, 0.0f, 1.0f 
#define SG_ORANGE_RED  1.0f, 0.270588235f, 0.0f, 1.0f 
#define SG_ORCHID  0.854901961f, 0.439215686f, 0.839215686f, 1.0f 
#define SG_PALE_GOLDENROD  0.933333333f, 0.909803922f, 0.666666667f, 1.0f 
#define SG_PALE_GREEN  0.596078431f, 0.984313725f, 0.596078431f, 1.0f 
#define SG_PALE_TURQUOISE  0.68627451f, 0.933333333f, 0.933333333f, 1.0f 
#define SG_PALE_VIOLET_RED  0.858823529f, 0.439215686f, 0.576470588f, 1.0f 
#define SG_PAPAYA_WHIP  1.0f, 0.937254902f, 0.835294118f, 1.0f 
#define SG_PEACH_PUFF  1.0f, 0.854901961f, 0.725490196f, 1.0f 
#define SG_PERU  0.803921569f, 0.521568627f, 0.247058824f, 1.0f 
#define SG_PINK  1.0f, 0.752941176f, 0.796078431f, 1.0f 
#define SG_PLUM  0.866666667f, 0.62745098f, 0.866666667f, 1.0f 
#define SG_POWDER_BLUE  0.690196078f, 0.878431373f, 0.901960784f, 1.0f 
#define SG_PURPLE  0.62745098f, 0.125490196f, 0.941176471f, 1.0f 
#define SG_WEB_PURPLE  0.501960784f, 0.0f, 0.501960784f, 1.0f 
#define SG_REBECCA_PURPLE  0.4f, 0.2f, 0.6f, 1.0f 
#define SG_RED  1.0f, 0.0f, 0.0f, 1.0f 
#define SG_ROSY_BROWN  0.737254902f, 0.560784314f, 0.560784314f, 1.0f 
#define SG_ROYAL_BLUE  0.254901961f, 0.411764706f, 0.882352941f, 1.0f 
#define SG_SADDLE_BROWN  0.545098039f, 0.270588235f, 0.0745098039f, 1.0f 
#define SG_SALMON  0.980392157f, 0.501960784f, 0.447058824f, 1.0f 
#define SG_SANDY_BROWN  0.956862745f, 0.643137255f, 0.376470588f, 1.0f 
#define SG_SEA_GREEN  0.180392157f, 0.545098039f, 0.341176471f, 1.0f 
#define SG_SEASHELL  1.0f, 0.960784314f, 0.933333333f, 1.0f 
#define SG_SIENNA  0.62745098f, 0.321568627f, 0.176470588f, 1.0f 
#define SG_SILVER  0.752941176f, 0.752941176f, 0.752941176f, 1.0f 
#define SG_SKY_BLUE  0.529411765f, 0.807843137f, 0.921568627f, 1.0f 
#define SG_SLATE_BLUE  0.415686275f, 0.352941176f, 0.803921569f, 1.0f 
#define SG_SLATE_GRAY  0.439215686f, 0.501960784f, 0.564705882f, 1.0f 
#define SG_SNOW  1.0f, 0.980392157f, 0.980392157f, 1.0f 
#define SG_SPRING_GREEN  0.0f, 1.0f, 0.498039216f, 1.0f 
#define SG_STEEL_BLUE  0.274509804f, 0.509803922f, 0.705882353f, 1.0f 
#define SG_TAN  0.823529412f, 0.705882353f, 0.549019608f, 1.0f 
#define SG_TEAL  0.0f, 0.501960784f, 0.501960784f, 1.0f 
#define SG_THISTLE  0.847058824f, 0.749019608f, 0.847058824f, 1.0f 
#define SG_TOMATO  1.0f, 0.388235294f, 0.278431373f, 1.0f 
#define SG_TRANSPARENT  0.0f, 0.0f, 0.0f, 0.0f 
#define SG_TURQUOISE  0.250980392f, 0.878431373f, 0.815686275f, 1.0f 
#define SG_VIOLET  0.933333333f, 0.509803922f, 0.933333333f, 1.0f 
#define SG_WHEAT  0.960784314f, 0.870588235f, 0.701960784f, 1.0f 
#define SG_WHITE  1.0f, 1.0f, 1.0f, 1.0f 
#define SG_WHITE_SMOKE  0.960784314f, 0.960784314f, 0.960784314f, 1.0f 
#define SG_YELLOW  1.0f, 1.0f, 0.0f, 1.0f 
#define SG_YELLOW_GREEN  0.603921569f, 0.803921569f, 0.196078431f, 1.0f 
